src/main/java/com/example/demo/error/exception/UnAuthorizedException.java
//package com.example.demo.error.exception;
//
//import com.example.demo.error.ErrorCode;
//
//public class UnAuthorizedException extends BusinessException{
//    public UnAuthorizedException(ErrorCode errorCode, String message) {
//        super(errorCode, message);
//    }
//}
